2003-05-06  Peter Stephenson  <pws@csr.com>

	* Koen van Hoo: zsh-users/6049: Src/utils.c: actually in
	4.1.1-test-2 but not documented: don't make terminal window size
	invalid on failed ioctl TIOCGIWNSZ (typically following SIGWINCH)
	since it doesn't do anyone any good.

	* unposted: Config/version.mk: version 4.1.1-test-2.

2003-05-05  Andrey Borzenkov  <bor@zsh.org>

	* unposted: .cvsignore, Completion/.cvsignore, Config/.cvsignore,
	Doc/.cvsignore, Doc/Zsh/.cvsignore, Etc/.cvsignore,
	Functions/.cvsignore, Src/.cvsignore, Src/Builtins/.cvsignore,
	Src/Modules/.cvsignore, Src/Zle/.cvsignore, Test/.cvsignore:
	add *.swp (vim)

	* unposted: Etc/CONTRIBUTORS: my name spelling changed ...

	* 18476: Src/Zle/complist.c, Src/Zle/zle_refresh.c: fix
	menu selection on terminals without cursor_down or with
	cursor_down set to ^J (Linux console)

2003-05-02  Peter Stephenson  <pws@csr.com>

	* 18497: README, Etc/NEWS, Fuctions/TCP/tcp_spam: Tweak
	info for 4.1.1; tcp_spam used incorrect syntax when verbose.

	* 18492: Doc/Zsh/expn.yo, Doc/Zsh/redirect.yo, Src/exec.c,
	Src/jobs.c, Src/signals.c, Src/utils.c, Src/zsh.h,
	Test/A04redirect.ztst, Test/D03procsubst.ztst:  Work around long
	standing problem that multios and output process substitutions
	run asynchronously.  Remember processes and wait for them.
	Unfortunately this only works when run from a builtin as otherwise
	the processes are forked in a subshell which execs the main
	command.  Document use of { ... } as workaround.

	* 18496: Etc/MACHINES: Paul Ackersviller reports the curses
	problem has gone on HP-UX 11 but --disable-dynamic is needed
	for use with Softbench.

2003-04-30  Oliver Kiddle  <opk@zsh.org>

	* 18486: Completion/Base/Utility/_describe: back-out 18458
	because it causes problems when completing only options

2003-04-28  Peter Stephenson  <pws@csr.com>

	* 17820 (tweaked): Andrej: Src/Modules/tcp.h: unconfirmed but
	apparently safe attempt to get recent Cygwin versions to include