@@ -1,3 +1,9 @@
+2003-05-07  Peter Stephenson  <pws@csr.com>
+
+	* 18508: Src/subst.c, Test/D04parameter.ztst: quoting of the `/'
+	separating source and replacment text in ${foo//bar/stuff} was
+	buggy.
+
 2003-05-06  Peter Stephenson  <pws@csr.com>
 
 	* Koen van Hoo: zsh-users/6049: Src/utils.c: actually in
